<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_ertps_test</name>
  <version>0.0.3</version>
  <description>Examples using RCL+RCLC API</description>
  <maintainer email="pablogarrido@eprosima.com">Pablo Garrido</maintainer>
  <license>Apache-2.0</license>
  <author>Borja Outerelo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fastcdr</depend>
  <depend>fastrtps</depend>
  <depend>fastrtps_cmake_module</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
